minor variable changes

--- a/NN-model.ipynb
+++ b/NN-model.ipynb
@@ -1136,16 +1136,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 123,
       "source": [
-        "print('Prediction value:', prediction[374])"
+        "print('Prediction value:', prediction[374:377])"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Prediction value: [9.9986327e-01 1.0201335e-04 1.0132790e-05 9.9989593e-01]\n"
+            "Prediction value: [[9.9986327e-01 1.0201335e-04 1.0132790e-05 9.9989593e-01]\n",
+            " [9.9976927e-01 4.1157007e-05 1.6301870e-05 9.9984860e-01]\n",
+            " [9.9991089e-01 4.6193600e-05 1.6838312e-05 9.9994117e-01]]\n"
           ]
         }
       ],
