Updated variables for better understanding of code

--- a/NN-model.ipynb
+++ b/NN-model.ipynb
@@ -635,9 +635,9 @@
       "cell_type": "code",
       "execution_count": 22,
       "source": [
-        "y = tokenizer.texts_to_sequences(test['tweet_content'].values)\r\n",
-        "y = pad_sequences(y, maxlen=20, padding='post')\r\n",
-        "print(y[3])"
+        "x_val = tokenizer.texts_to_sequences(test['tweet_content'].values)\r\n",
+        "x_val = pad_sequences(x_val, maxlen=20, padding='post')\r\n",
+        "print(x_val[3])"
       ],
       "outputs": [
         {
@@ -819,8 +819,8 @@
       "execution_count": 29,
       "source": [
         "from sklearn.model_selection import train_test_split\r\n",
-        "x_test = train.iloc[:,1:].values\r\n",
-        "y_test=test.iloc[:,1:].values"
+        "y = train.iloc[:,1:].values\r\n",
+        "y_val=test.iloc[:,1:].values"
       ],
       "outputs": [],
       "metadata": {
@@ -832,7 +832,7 @@
       "cell_type": "code",
       "execution_count": 30,
       "source": [
-        "print(x_test)"
+        "print(y)"
       ],
       "outputs": [
         {
@@ -942,11 +942,11 @@
       "cell_type": "code",
       "execution_count": 34,
       "source": [
-        "history=model.fit(x, x_test,\r\n",
+        "history=model.fit(x, y,\r\n",
         "          batch_size=batch_size,\r\n",
         "          epochs=epochs,\r\n",
         "          verbose=1,\r\n",
-        "          validation_data=(y, y_test))"
+        "          validation_data=(x_val, y_val))"
       ],
       "outputs": [
         {
@@ -1268,7 +1268,7 @@
       "cell_type": "code",
       "execution_count": 38,
       "source": [
-        "score= model.evaluate(y, y_test, verbose = 2)\r\n",
+        "score= model.evaluate(x_val, y_val, verbose = 2)\r\n",
         "print(\"Loss: %.2f\" % score[0])\r\n",
         "print(\"Accuracy: %.2f\" % score[1])"
       ],
